# hidden_markov

./: Hidden Markov Models.ipynb  README.md  hidden_markov.f90  hmm.py  pyproject.toml  setup.py
debian/: README  README.Debian  README.source  changelog  control  copyright  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  hiddenmarkov.cron.d.ex  hiddenmarkov.default.ex  hiddenmarkov.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
